--- a/src/index.css
+++ b/src/index.css
@@ -17,28 +17,47 @@
 }
 
 
-.profileImage {
-  padding: 0;
+.profileHeader {
+  position: relative;
 }
 
-
-.pic1 {
+.banner {
   width: 100%;
-  height: auto;
-  display: block;
+  height: 150px;
+  object-fit: cover;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
-  object-fit: cover;
 }
+
+/* Round profile photo */
+.profilePic {
+  position: absolute;
+  bottom: -50px;
+  /* makes it sit half inside banner & half in text area */
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 4px solid #212833;
+  /* same color as profileTab bg */
+  object-fit: cover;
+  background-color: #fff;
+}
+
 
 
 .profileText {
   padding: 15px;
-  padding-top: 5px;
+  padding-top: 60px;
   text-align: left;
   font-family: "Alan Sans", sans-serif;
   color: #E0E0E0;
   flex-grow: 1;
+}
+
+.profileText a {
+  color: lightblue;
 }
 
 
@@ -109,6 +128,11 @@ body {
   padding-left: 30px;
   overflow-y: auto;
   /* ✅ only this scrolls */
+}
+
+.mainBody button {
+  font-family: "Bitcount Prop Single Ink", system-ui;
+  border-radius: 2px;
 }
 
 
@@ -196,4 +220,8 @@ body {
     /* let the content flow naturally */
     padding-left: 10px;
   }
+}
+
+.AboutMe {
+  font-size: large;
 }
